# darktable-pixelpipe

./: .gitignore  CLAUDE.md  README.md  darktable-extraction-project-plan.md
.github/workflows/: irc.yml  nightly.yml
analysis/: common-dependencies.json  iop-dependencies.json  module-priority.md
docs/: history-format.md
include/: dtpipe.h
libdtpipe/: .gitignore  CMakeLists.txt  README.md
libdtpipe/cmake/: FindLCMS2.cmake
libdtpipe/include/: dtpipe.h
libdtpipe/src/: CMakeLists.txt  dtpipe_internal.h  init.c
libdtpipe/src/common/: iop_order.c  iop_order.h
libdtpipe/src/history/: deserialize.c  deserialize.h  serialize.c  serialize.h  xmp_read.cc  xmp_read.h  xmp_write.cc  xmp_write.h
libdtpipe/src/imageio/: export.cc  load.cc
libdtpipe/src/iop/: demosaic.c  exposure.c  highlights.c  iop_math.h  rawprepare.c  sharpen.c  temperature.c
libdtpipe/src/iop/demosaicing/: basics.c  passthrough.c  ppg.c
libdtpipe/src/pipe/: create.c  create.h  params.c  params.h  pixelpipe.c  pixelpipe.h  render.c  render.h
libdtpipe/tests/: CMakeLists.txt  benchmark_performance.c  gen_reference.c  quick_render_debug.c  test_history_deserialize.c  test_history_roundtrip.c  test_main.c  test_params_unit.c  test_pipeline_create.c  test_pipeline_export.c  test_pipeline_params.c  test_pipeline_process.c  test_pipeline_render.c  test_regression.c  test_xmp_read.c  test_xmp_write.c
libdtpipe/tests/reference/: metadata.txt  preset_a.json  preset_b.json  preset_c.json
node/: binding.gyp  package-lock.json  package.json  tsconfig.test.json
node/lib/: index.js
node/src/: addon.cc
node/test/: test.cts  test.js
node/types/: index.d.ts
schemas/: basecurve.json  bilat.json  channelmixerrgb.json  clipping.json  colorbalancergb.json  colorin.json  colorout.json  colorzones.json  crop.json  demosaic.json  denoiseprofile.json  diffuse.json  exposure.json  filmicrgb.json  finalscale.json  flip.json  gamma.json  highlights.json  levels.json  nlmeans.json  rawprepare.json  rgblevels.json  sharpen.json  sigmoid.json  temperature.json  tonecurve.json  velvia.json  vibrance.json
scripts/: strip_iop.py
src/iop/: basecurve.c  bilat.c  channelmixer.c  channelmixerrgb.c  clipping.c  colorbalancergb.c  colorin.c  colorout.c  crop.c  demosaic.c  denoiseprofile.c  exposure.c  filmic.c  filmicrgb.c  flip.c  graduatednd.c  highlights.c  levels.c  rawprepare.c  rgbcurve.c  sharpen.c  sigmoid.c  temperature.c  vignette.c
